# microcompute

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  doc.md  doc_generator.py  makefile  makefile_win  mc.h  mc_vec.h  microcompute.h  microcompute.lua  microcompute_gl.h  microcompute_lua.c  microcompute_vec.h  microcompute_vec.py  mini_doc_gen.py
example/: arrays.c  arrays.glsl  convert.glsl  mandelbrot.c  mandelbrot.glsl  test1.c
examples/: CMakeLists.txt  array  array.c  array.glsl  array.lua  array.spv  check_devs.c  check_devs.glsl  makefile  mandelbrot.c  mandelbrot.glsl  mandelbrot.lua  stb_image_write.h  test.cpp
examples/c/: array.c  makefile  mandelbrot.c
examples/c/include/: stb_image_write.h
examples/lua/: array.lua  mandelbrot.lua
examples/src/: arrays.c  mandelbrot.c
include/: egl.h  k_bool.h  k_result.h  microcompute.h  microcompute.hpp  microcompute_extra.h
lua_interface/: makefile  microcompute.lua  microcompute_lua.c
scripts/: mc_vec.py
shader/: test.glsl
src/: _microcompute.h  buffer.c  buffer.cpp  buffer.h  buffer.hpp  buffer_copier.c  buffer_copier.h  core.c  device.c  device.cpp  device.h  device.hpp  extra.c  glad_impl.c  hybrid_buffer.c  hybrid_buffer.h  instance.c  instance.cpp  instance.h  instance.hpp  log.c  log.h  main.c  microcompute.h  microcompute_internal.h  misc.c  misc.h  program.c  program.h  program_code.c  program_code.h  uniform.c  util.c  vec.c
src/glad/: eglplatform.h  glad.c  glad.h  glad_egl.c  glad_egl.h
src/micro_compute/: _micro_compute.h  buffer.c  core.c  micro_compute.h  program.c  state.c  uniform.c
